<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:clickable="true"
  android:focusable="true">

  <LinearLayout
  android:orientation="horizontal"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

    <TextView
      android:id="@+id/update_footprint_id"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:textColor="#00FF00"
      android:textSize="30sp"
      android:text="@string/update_your_footprint"
      />

    <CheckBox
      android:id="@+id/check_1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/takeaction_1"
      android:background="@color/colorWhite"
      android:layout_marginTop="10dp"
      android:checked="false"/>

    <CheckBox
      android:id="@+id/check_2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/takeaction_2"
      android:background="@color/colorWhite"
      android:checked="false"
      android:layout_marginTop="10dp"/>

    <CheckBox
      android:id="@+id/check_3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/takeaction_3"
      android:background="@color/colorWhite"
      android:checked="false"
      android:layout_marginTop="10dp"/>

    <CheckBox
      android:id="@+id/check_4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/takeaction_4"
      android:background="@color/colorWhite"
      android:checked="false"
      android:layout_marginTop="10dp"/>

    <CheckBox
      android:id="@+id/check_5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/takeaction_5"
      android:background="@color/colorWhite"
      android:checked="false"
      android:layout_marginTop="10dp"/>

    <CheckBox
      android:id="@+id/check_6"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/takeaction_6"
      android:background="@color/colorWhite"
      android:checked="false"
      android:layout_marginTop="10dp"/>

    <CheckBox
      android:id="@+id/check_7"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/takeaction_7"
      android:background="@color/colorWhite"
      android:checked="false"
      android:layout_marginTop="10dp"/>

    <CheckBox
      android:id="@+id/check_8"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/takeaction_8"
      android:background="@color/colorWhite"
      android:checked="false"
      android:layout_marginTop="10dp"/>

    <CheckBox
      android:id="@+id/check_9"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/takeaction_9"
      android:background="@color/colorWhite"
      android:layout_marginTop="10dp"/>

    <CheckBox
      android:id="@+id/check_10"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/takeaction_10"
      android:background="@color/colorWhite"
      android:checked="false"
      android:layout_marginTop="10dp"/>

    <CheckBox
      android:id="@+id/check_11"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/takeaction_11"
      android:background="@color/colorWhite"
      android:checked="false"
      android:layout_marginTop="10dp"/>

    <CheckBox
      android:id="@+id/check_12"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/takeaction_12"
      android:background="@color/colorWhite"
      android:checked="false"
      android:layout_marginTop="10dp"/>

    <CheckBox
      android:id="@+id/check_13"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/takeaction_13"
      android:background="@color/colorWhite"
      android:checked="false"
      android:layout_marginTop="10dp"/>

    <CheckBox
      android:id="@+id/check_14"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/takeaction_14"
      android:background="@color/colorWhite"
      android:checked="false"
      android:layout_marginTop="10dp"/>

    <CheckBox
      android:id="@+id/check_15"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/takeaction_15"
      android:background="@color/colorWhite"
      android:checked="false"
      android:layout_marginTop="10dp"/>

    <Button
      android:id="@+id/update_button"
      android:layout_width="100dp"
      android:layout_height="80dp"
      android:text="@string/update"
      android:textStyle="bold"
      android:layout_marginBottom="20dp"/>

  </LinearLayout>

  </android.support.v7.widget.CardView>